* Ensure select_regular() doesn't cache an optimized selector. [jddalton]

* Ensure the `selector` argument of select()/match() is not undefined/null. [jddalton]

* Update jQuery adapters to support the `header/footer` properties and make `:has`, `:first`, and `:last` work with non tagName selectors. [jddalton]

* Remove document check from `:lang` selector. [Diego Perini]

* Make `:contains`, `:not`, and `:lang` return an empty array if nothing is passed in their parenthesis (:lang(), :not("")) . [jddalton]

* Make select_regular() `ID optimization RTL` use `re_optimizeIdAtEnd`, replace overlooked `selector` variables with `normalized`, and ensure ID optimizations skip ID selectors with pseudos attached. [jddalton]

* Revert `lastNormalized` usage in match() because of issues when match() calls select(). [jddalton]

* Give compileSelector() ability to process custom code before and after the primary iterator via `header` and `footer` properties of the callbacks return object. [jddalton]

* Merge compileGroup() and compileSingle() into compileSelector(). [jddalton]

* Ensure `lastNormalized` isn't modifed by selector optimizations in select_regular(). [jddalton]

* Make `re_optimizeByRemoval` use `str_identifier`, fork byClass()/byName()/byTag() based on feature tests, and remove compiled nodeType checks by making byTag() filter non-elements. [Diego Perini, jddalton]

* Revert `NATIVE_SLICE_PROTO` feature test to check first element of the array because Safari 2.0 returns an Array with undefined values in it. [Diego Perini]

* Make compileSelector() pass `match, source, mode, selector` to callbacks. [jddalton]

* Add `HOST_DOC` to ensure `ctx_doc` is reset when not passing a context to match()/select(). [jddalton]

* Revert to character comparisons using `@` for non-element nodes. [Diego Perini]

* Add persisted `lastNormalized` variable, remove `normSelector` and `origSelector` from select_regular() and match(). [jddalton]
